# SFEA_student_dashboard

./: .gitignore  CODE_WALKTHROUGH.md  QUICK_START.md  README.md  main.py  pyproject.toml  requirements.txt
account/: admin.py  forms.py  models.py  otp_models.py  signals.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_otp_code.py
account/utils/: create_token.py
account/utils/email/: send_mail.py
account/utils/otp/: create_otp.py  verify_otp.py
core/: settings.py  urls.py
course_articles/: apps.py
static/css/: style.css
static/js/: main.js
templates/: base.html  home.html
templates/emails/: email_field_update_approved.html  email_field_update_rejected.html  email_field_update_request.html  email_grade_notification.html
templates/extends/auth/: awaiting_approval.html  login.html  register.html  verify_otp.html
templates/extends/pages/: profile.html
templates/includes/nav-bar/: nav.html
