[project]
name = "student-dashboard-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "django-cloudinary-storage>=0.3.0",
    "django-jazzmin>=3.0.4",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=25.3.0",
    "mysqlclient>=2.2.8",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]
